# sxd-document-safe

./: Cargo.toml
.github/workflows/: ci.yml
compatibility-tests/benchmarks/benches/: string_pool.rs
compatibility-tests/compile-fail/tests/ui/: string_pool.rs  thindom.rs  thindom.stderr
src/: dom.rs  dom_no_unsafe.rs  lib.rs  parser.rs  raw.rs  raw_no_unsafe.rs  string_pool.rs  string_pool_no_unsafe.rs  thindom.rs  thindom_no_unsafe.rs  writer.rs  writer_no_unsafe.rs
