[package]
name = "sxd-document_no_unsafe"
version = "0.3.2"
authors = ["Jake Goulding <jake.goulding@gmail.com>", "Neil Soiffer <soiffer@alum.mit.edu>"]
edition = "2024"

description = "A Rust XML DOM library with an optional no-unsafe feature"
readme = "README.md"
keywords = ["xml"]

repository = "https://github.com/nsoiffer/sxd-document"
documentation = "https://docs.rs/sxd-document"

license = "MIT"

[features]
default = ["typed-arena"]
__internal_expose_string_pool = []
no-unsafe = []

[dependencies]
peresil = "0.3.0"
typed-arena = { version = "2.0", optional = true }
