[package]
name = "sxd-document-no-unsafe"
version = "0.4.2"
authors = ["Jake Goulding <jake.goulding@gmail.com>", "Neil Soiffer <soiffer@alum.mit.edu>"]
edition = "2024"

description = "A Rust XML DOM library (safe code)"
readme = "README.md"
keywords = ["xml"]

repository = "https://github.com/nsoiffer/sxd-document"
documentation = "https://docs.rs/sxd-document"

license = "MIT"

[features]
__internal_expose_string_pool = []

[dependencies]
peresil = "0.3.0"
